--- a/src/main/resources/templates/navbar.html
+++ b/src/main/resources/templates/navbar.html
@@ -10,10 +10,8 @@
                 <li class="nav-item">
                     <a class="nav-link" href="#">로그인</a>
                 </li>
-            </ul>
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">회원 가입</a>
+                    <a class="nav-link" th:href="@{/user/signup}">회원가입</a>
                 </li>
             </ul>
         </div>
